@@ -1,6 +1,10 @@
 Current version : BridJ 0.5-SNAPSHOT
 
 - Added deprecated support for struct fields implemented as Java fields, to ease up migration from JNA (needs manual calls to BridJ.writeToNative(struct) and BridJ.readFromNative(struct)) (issue #54)
+- Added BRIDJ_DEBUG_POINTERS=1 (or -Dbridj.debug.pointers=true) to display extended pointer allocation / deallocation debug information
+- Added BridJ.describe(Type) to describe structs layouts (automatically logged for each struct type when BRIDJ_DEBUG=1 or -Dbridj.debug=true)
+- Added BridJ.describe(NativeObject).
+- Added StructObject.toString() (calls BridJ.describe(this))
 ...
 
 BridJ 0.4 (r1869, 20110408)
